
2006.04.13 -- Version 2.1-beta14

* Fixed Windows server bug in time backtrack handling code which
  could cause TLS negotiation failures on legitimate clients.
	
* Rewrote gettimeofday function for Windows to be
  simpler and more efficient.
	
* Merged PKCS#11 extensions to easy-rsa/2.0  (Alon Bar-Lev).

* Added --route-metric option to set a default route metric
  for --route (Roy Marples).
	
2006.04.12 -- Version 2.1-beta13

* Code added in 2.1-beta7 and 2.0.6-rc1 to extend byte counters
  to 64 bits caused a bug in the Windows version which has now
  been fixed.  The bug could cause intermittent crashes.
	
2006.04.05 -- Version 2.1-beta12

* Security Vulnerability -- An OpenVPN client connecting to a
  malicious or compromised server could potentially receive
  "setenv" configuration directives from the server which could
  cause arbitrary code execution on the client via a LD_PRELOAD
  attack.  A successful attack appears to require that (a) the
  client has agreed to allow the server to push configuration
  directives to it by including "pull" or the macro "client" in
  its configuration file, (b) the client configuration file uses
  a scripting directive such as "up" or "down", (c) the client
  succesfully authenticates the server, (d) the server is
  malicious or has been compromised and is under the control of
  the attacker, and (e) the attacker has at least some level of
  pre-existing control over files on the client (this might be
  accomplished by having the server respond to a client web request
  with a specially crafted file).  Credit: Hendrik Weimer.
  CVE-2006-1629.

  The fix is to disallow "setenv" to be pushed to clients from
  the server, and to add a new directive "setenv-safe" which is
  pushable from the server, but which appends "OPENVPN_" to the
  name of each remotely set environmental variable.

* "topology subnet" fix for FreeBSD (Benoit Bourdin).

* PKCS11 fixes (Alon Bar-Lev).  For full description: